@@ -21,7 +21,7 @@ package com.exedio.cope.console;
 
 import static com.exedio.cope.console.Format.format;
 
-import com.exedio.cope.util.ClusterListenerInfo;
+import com.exedio.cope.info.ClusterListenerInfo;
 import com.exedio.cope.util.SequenceChecker;
 
 final class Cluster_Jspm
