@@ -24,8 +24,8 @@ import static com.exedio.cope.console.Format.formatAndHide;
 import static com.exedio.cope.console.Format.highlightSQL;
 import static com.exedio.cope.console.Format.ratio;
 
-import com.exedio.cope.util.QueryCacheHistogram;
-import com.exedio.cope.util.QueryCacheInfo;
+import com.exedio.cope.info.QueryCacheHistogram;
+import com.exedio.cope.info.QueryCacheInfo;
 
 import static com.exedio.cops.XMLEncoder.encode;
 
