@@ -37,7 +37,7 @@ import java.util.Map;
 
 import com.exedio.cope.util.Pool;
 import com.exedio.cope.util.PoolCounter;
-import com.exedio.cope.util.SequenceInfo;
+import com.exedio.cope.info.SequenceInfo;
 import com.exedio.dsmf.ConnectionProvider;
 import com.exedio.dsmf.Constraint;
 import com.exedio.dsmf.Driver;
