@@ -36,14 +36,14 @@ import java.util.ListIterator;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicLong;
 
-import com.exedio.cope.util.ClusterListenerInfo;
-import com.exedio.cope.util.ItemCacheInfo;
+import com.exedio.cope.info.ClusterListenerInfo;
+import com.exedio.cope.info.ItemCacheInfo;
 import com.exedio.cope.util.ModificationListener;
 import com.exedio.cope.util.Pool;
 import com.exedio.cope.util.Properties;
-import com.exedio.cope.util.QueryCacheHistogram;
-import com.exedio.cope.util.QueryCacheInfo;
-import com.exedio.cope.util.SequenceInfo;
+import com.exedio.cope.info.QueryCacheHistogram;
+import com.exedio.cope.info.QueryCacheInfo;
+import com.exedio.cope.info.SequenceInfo;
 import com.exedio.dsmf.Constraint;
 import com.exedio.dsmf.Schema;
 
