@@ -29,8 +29,8 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-import com.exedio.cope.util.QueryCacheHistogram;
-import com.exedio.cope.util.QueryCacheInfo;
+import com.exedio.cope.info.QueryCacheHistogram;
+import com.exedio.cope.info.QueryCacheInfo;
 
 final class QueryCache
 {
