@@ -28,8 +28,8 @@ import java.util.Iterator;
 import java.util.List;
 
 import com.exedio.cope.junit.CopeTest;
-import com.exedio.cope.util.ItemCacheInfo;
-import com.exedio.cope.util.SequenceInfo;
+import com.exedio.cope.info.ItemCacheInfo;
+import com.exedio.cope.info.SequenceInfo;
 import com.exedio.dsmf.CheckConstraint;
 import com.exedio.dsmf.Constraint;
 import com.exedio.dsmf.ForeignKeyConstraint;
