@@ -20,7 +20,7 @@ package com.exedio.cope;
 
 import java.util.EnumSet;
 
-import com.exedio.cope.util.ItemCacheInfo;
+import com.exedio.cope.info.ItemCacheInfo;
 import com.exedio.dsmf.Constraint;
 
 
